@@ -30,7 +30,7 @@ UI - Min/Max/Average when selecting range
 UI - Red if unable to zoom
 
 v2.7.0
-New way to find vcontrol (search for vcontrol.id on all drives)
+New way to find vcontrol on Windows (search for vcontrol.id on all drives)
 Convert vbar log to unicode before inserting
 Not red backgroud on "Gefaehrliche Vibrationen"
 flights by week graph works for seasons
@@ -38,3 +38,5 @@ VBar log window show content without scrolling
 VBar log window have red text for severity 4
 VPlane and VCopter implemented
 Status update when importing
+Fixed Units in UI log window
+Title of model, battery, date in UI log window
